--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <div class="footer">
         <div class="footer__instagram">
-           <a href="https://github.com/stwslim83" target="_blank"> <img src="https://www.kindpng.com/picc/m/128-1280192_github-logo-png-github-png-transparent-png.png"></a>
+           <a href="https://github.com/stwslim83" target="_blank"> <img  class="github"src="https://cdn-icons-png.flaticon.com/512/25/25231.png"></a>
            <!-- <img src="https://cdn-icons-png.flaticon.com/512/87/87390.png" alt=""> -->
         </div>
         <div class="footer__twitter">
